syntax = "proto3";
import "google/protobuf/timestamp.proto";	

option csharp_namespace = "GrpcService.Protos";

service RemotePost{
	rpc GetPostById (PostLookupModel) returns (PostModel);
	rpc AddPost (PostModel) returns (Reply);
	rpc DeletePost (PostLookupModel) returns (Reply);
	rpc GetAllPosts(Empty) returns (PostsList);
}

// The request message
message PostLookupModel{
	int32 postId = 1;
}

// The response message
message PostModel{
	int32 postId = 1;
	string description = 2;
	string domain = 3;
	google.protobuf.Timestamp date = 4;
}

message Reply {
	string result = 1;
	bool isOk = 2;
}

message PostsList {
   repeated PostModel items = 1;
}

message Empty {}